force-app/main/default/objects/Classes_KZD__c/Classes_KZD__c.object-meta.xml
<CustomObject>
    <description>Created By: Kehali
Business Unit: Alphaforce
Purpose: Classes KZD represents Christina&apos;s preschool classes.</description>
    <label>Classes KZD</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Class Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes KZD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>