force-app/main/default/objects/Classes_KZD__c/fields/Class_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_Status__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <inlineHelpText>Choose Class Status</inlineHelpText>
    <label>Class Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Past</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>