force-app/main/default/objects/Classes_KZD__c/fields/Classes__c.field-meta.xml
<CustomField>
    <fullName>Classes__c</fullName>
    <description>Created By: Kehali Demsash
Purpose: To make available all the preschool classes for students to choose.</description>
    <inlineHelpText>Choose classes from the list</inlineHelpText>
    <label>Classes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Coloring</fullName>
            </value>
            <value>
                <fullName>Colors</fullName>
            </value>
            <value>
                <fullName>Cutting</fullName>
            </value>
            <value>
                <fullName>Drawing and painting</fullName>
            </value>
            <value>
                <fullName>Letters</fullName>
            </value>
            <value>
                <fullName>Listening</fullName>
            </value>
            <value>
                <fullName>Numbers</fullName>
            </value>
            <value>
                <fullName>Physical activity</fullName>
            </value>
            <value>
                <fullName>Shapes</fullName>
            </value>
            <value>
                <fullName>Sorting objects</fullName>
            </value>
            <value>
                <fullName>Writing letters and numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>